syntax = "proto3";

package tasks;

option go_package = "github.com/PinceredCoder/restGo/api/proto/v1;tasks";

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateTaskRequest {
  string title = 1 [(validate.rules).string = {
    min_len: 1,
    max_len: 100,
  }];
  
  string description = 2 [(validate.rules).string.max_len = 500];
}

message UpdateTaskRequest {
  string title = 1 [(validate.rules).string = {
    min_len: 1,
    max_len: 100,
  }];
  string description = 2 [(validate.rules).string.max_len = 500];
  optional bool completed = 3;
}

message GetTaskResponse {
  Task task = 1 [(validate.rules).message.required = true];
}

message ListTasksResponse {
  repeated Task tasks = 1;
}
